@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 cfba004c0bad5dd805bd195b517e86a6d8ef6d5d ChangeLog
+SHA1 60543c4b1df9e5c38730c51a0dd9ce32c742e405 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 e592865bf69643640e23a7380db5738d072bcf32 META.yml
-SHA1 75319855bb4089bf379c2389b6e4c85c39e7eb08 Makefile.PL
+SHA1 5e44147faf1729f64a22ce66dbe4b0b864793033 META.yml
+SHA1 10f3df87fa553d59ecebbd98f3f6cc7ed0a780d1 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 bc9d96189702d6bcf5ff37989d012693b461deac lib/Net/FullAuto.pm
+SHA1 69d2a8e2bec2f55bb2d6248182b7c662ef8e5764 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 1e9cdb0a94c0e832ac6240d6ae26fcab0cfebbc0 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 c6096414c9970ce64beb619cc9f0d78fe4d69993 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 a655b2b6c4ae01424366908a772ab45df34fde6d lib/Net/FullAuto/FA_Core.pm
+SHA1 aed06861a5343854331b5e012cadc0dd7748a7d4 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT1NKSAAoJEBa/9Pad787Eu1gH/00NDkY9Stdx7b1leQUZPt70
-rJHZWqLdI13UIP+7uvkk6oaiPbF6MBUCshu1S3jvHw/Y6i+9OgM+0R8UK2925B/k
-jJSD6YgdSqpJ3U0FA1iWmxrSx1GKAZ8LDtVpxfwq/0R11yz02dM1h6rv28Jh/UJP
-5T+5YF35ujcxxHXhU/fKhk+2omTxeqwjiD943vI14r0rt1Pote/fgnmzKq0Qt8dD
-/Un+d8ync5hSTWTF10kTEnwvu4ecBDSIfLk0jjdGEfNgNsanxEVRdEYzEOB0xpy2
-tFDnRGkwLyWkqxlQ6IrntkTbIBuYLNgJEIZf8At61Qoa4Bx2yX38R8BsRlcuS04=
-=HJFB
+iQEcBAEBAgAGBQJT1TEMAAoJEBa/9Pad787E/hUH/0kPHmulVTtKuj1hAF9fm+pc
+A6YX0HXKIakyyMSHNt1oAs74HrnX80xDyl/Ze1sjMByDKgOfjdog2F5uFYKOINms
+yPH5tq1q+Rmt91Z2KqsM14vJH9ZTGy23bLmL+FLdAFzjukXY/7LB72ZDNXHThMc7
+lUE1rmrKhDuZIZgepETOQOQhJuae64YjuqoKXVNpFvHpB+FjDd3YArwAy4w4g29p
+3DUX/KJkZbp+S67fqqnQh0iIzG0C6nAUTcFw+ZCqeG4jz9FRWDIC0VcuaKbEOQ0Y
+LK005mjkyuIwHorP1RLXor04Us8i1zY6sSnhdd6wP94yP9fg0RqbBpHc+Trj3YE=
+=OvGJ
 -----END PGP SIGNATURE-----
