@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999982';
+our $VERSION='0.9999999983';
 
 
 use 5.005;
