@@ -22,6 +22,15 @@
 
 2014-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999983 released.
+
+        * Fixes for Amazon AMI.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999982 released.
 
         * Fixed Makefile.PL for Amazon AMI.
